# naonav

./: CMakeLists.txt  main.cpp  qiproject.xml
build-onnao_compile/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  qitest.cmake
build-onnao_compile/sdk/: qitest.json
build-onnao_compile/sdk/share/qi/: path.conf
build-remote_toolchain/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  dependencies.cmake  qitest.cmake
build-remote_toolchain/sdk/: qitest.json
build-remote_toolchain/sdk/share/qi/: path.conf
build-sys-linux-x86_64/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-sys-linux-x86_64/sdk/: qitest.json
build-sys-linux-x86_64/sdk/share/qi/: path.conf
include/: godzila.hpp  naopp.hpp
src/: godzila.cpp  naopp.cpp
